Refactor audio preparation and remove Electron logic
Removed Electron song loading logic and refactored audio preparation code.

--- a/index.html
+++ b/index.html
@@ -756,24 +756,6 @@
     { id: 'official_2', name: "VAPORWAVE DRIVE", bpm: 110, isTutorial: true, source: "official", highScore: 0, maxCombo: 0 }
     ];
 
-    // ✅ Electron exe 환경: songs 폴더 자동 로드
-if (window.songAPI) {
-  const autoSongs = window.songAPI.loadSongsFromFolder();
-
-  autoSongs.forEach(s => {
-    playlist.push({
-      id: "auto_" + s.path,
-      name: s.name,
-      bpm: 124,               // 나중에 json으로 분리 가능
-      source: "official",
-      filePath: s.path,      // ⭐ Electron 전용 핵심
-      highScore: 0,
-      maxCombo: 0
-    });
-  });
-}
-
-
         const savedSettings = JSON.parse(localStorage.getItem('timeLoopSettings'));
         if (savedSettings) {
             CONFIG.masterVolume = savedSettings.volume ?? 0.7;
@@ -1405,35 +1387,28 @@ function renderAchievements() {
         }
         renderPlaylist();
 
-       async function prepareAudio() {
-  if (!audioCtx) audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+        async function prepareAudio() {
+            if (!audioCtx) audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+            
+            if (selectedSong.isTutorial) {
+                const duration = 24; 
+                audioBuffer = audioCtx.createBuffer(2, audioCtx.sampleRate * duration, audioCtx.sampleRate);
+                for (let channel = 0; channel < 2; channel++) {
+                    const data = audioBuffer.getChannelData(channel);
+                    for (let i = 0; i < audioBuffer.length; i++) {
+                        const t = i / audioCtx.sampleRate;
+                        data[i] = Math.sin(2 * Math.PI * 60 * t) * Math.exp(-(i % (audioCtx.sampleRate/2)) / 5000) * 0.15;
+                    }
+                }
+            } else {
+                const arrayBuffer = await selectedSong.file.arrayBuffer();
+                audioBuffer = await audioCtx.decodeAudioData(arrayBuffer);
+            }
 
-  if (selectedSong.isTutorial) {
-    // 기존 튜토리얼 처리 유지
-  } else {
-    if (selectedSong.filePath) {
-      // ✅ Electron: fs로 직접 읽기
-      const fs = window.require?.("fs");
-      const buffer = fs.readFileSync(selectedSong.filePath);
-      const arrayBuffer = buffer.buffer.slice(
-        buffer.byteOffset,
-        buffer.byteOffset + buffer.byteLength
-      );
-      audioBuffer = await audioCtx.decodeAudioData(arrayBuffer);
-    } else if (selectedSong.file) {
-      // 웹/업로드 방식
-      const arrayBuffer = await selectedSong.file.arrayBuffer();
-      audioBuffer = await audioCtx.decodeAudioData(arrayBuffer);
-    } else {
-      throw new Error("Audio source not found");
-    }
-  }
-
-  gainNode = audioCtx.createGain();
-  gainNode.gain.value = CONFIG.masterVolume;
-  gainNode.connect(audioCtx.destination);
-}
-
+            gainNode = audioCtx.createGain();
+            gainNode.gain.value = CONFIG.masterVolume;
+            gainNode.connect(audioCtx.destination);
+        }
 
         class Particle {
             constructor(x, y, color) {
