feat: animate menu transitions and harden Electron audio fetch fallbacks

--- a/index.html
+++ b/index.html
@@ -239,6 +239,25 @@
     .rank-slam  { animation: slam 0.65s cubic-bezier(0.175,0.885,0.32,1.275) both; }
     .screen-shake { animation: shake 0.22s ease-in-out 1; }
 
+
+
+            .screen-enter {
+                animation: screen-enter 0.35s ease-out both;
+            }
+            @keyframes screen-enter {
+                0% { opacity: 0; transform: scale(0.985) translateY(8px); }
+                100% { opacity: 1; transform: scale(1) translateY(0); }
+            }
+
+            .btn-press {
+                animation: btn-press 0.18s ease-out;
+            }
+            @keyframes btn-press {
+                0% { transform: scale(1); }
+                50% { transform: scale(0.94); }
+                100% { transform: scale(1); }
+            }
+
         </style>
     </head>
     <body>
@@ -831,18 +850,26 @@
             }
         }
 
+        function showScreenWithAnim(el) {
+            el.classList.remove('hidden');
+            if (!el.classList.contains('flex')) el.classList.add('flex');
+            el.classList.remove('screen-enter');
+            void el.offsetWidth;
+            el.classList.add('screen-enter');
+        }
+
         function openModeSelect() {
             introScreen.classList.add('hidden');
-            modeSelectScreen.classList.remove('hidden');
-            modeSelectScreen.classList.add('flex');
+            storyScreen.classList.add('hidden');
+            document.getElementById('start-screen').classList.add('hidden');
+            showScreenWithAnim(modeSelectScreen);
         }
 
         function openClassicMenu(tab) {
             modeSelectScreen.classList.add('hidden');
             storyScreen.classList.add('hidden');
             const startScreen = document.getElementById('start-screen');
-            startScreen.classList.remove('hidden');
-            startScreen.classList.add('flex');
+            showScreenWithAnim(startScreen);
 
             if (tab === 'official') {
                 libraryTab = 'official';
@@ -889,8 +916,7 @@
             modeSelectScreen.classList.add('hidden');
             const startScreen = document.getElementById('start-screen');
             startScreen.classList.add('hidden');
-            storyScreen.classList.remove('hidden');
-            storyScreen.classList.add('flex');
+            showScreenWithAnim(storyScreen);
             selectedStoryChapter = Math.min(selectedStoryChapter, storyProgress.unlockedChapter - 1);
             selectedStoryMap = STORY_CHAPTERS[selectedStoryChapter].maps[0];
             renderStoryTabs();
@@ -1602,6 +1628,15 @@ function renderAchievements() {
         playBtn.click();
     };
 
+    [introStartBtn, btnStoryMode, btnBasicMode, btnCustomMode, storyPlayBtn, storyBackBtn].forEach(btn => {
+        if (!btn) return;
+        btn.addEventListener('click', () => {
+            btn.classList.remove('btn-press');
+            void btn.offsetWidth;
+            btn.classList.add('btn-press');
+        });
+    });
+
         function renderPlaylist() {
     songListContainer.innerHTML = '';
 
@@ -1675,10 +1710,31 @@ function renderAchievements() {
   };
 
   const decodeFromUrl = async (url) => {
-    const res = await fetch(url);
-    if (!res.ok) throw new Error(`Failed to load audio: ${url}`);
-    const arrayBuffer = await res.arrayBuffer();
-    return await decodeAudioDataSafe(arrayBuffer);
+    const candidates = [url];
+    try {
+      candidates.push(new URL(url, window.location.href).href);
+    } catch (_) {}
+    if (selectedSong?.filePath) {
+      const abs = selectedSong.filePath.replace(/\\/g, '/');
+      if (/^[A-Za-z]:\//.test(abs)) {
+        candidates.push(`file:///${abs}`);
+      } else if (abs.startsWith('/')) {
+        candidates.push(`file://${abs}`);
+      }
+    }
+
+    let lastError = null;
+    for (const c of [...new Set(candidates)]) {
+      try {
+        const res = await fetch(c);
+        if (!res.ok) throw new Error(`HTTP ${res.status}`);
+        const arrayBuffer = await res.arrayBuffer();
+        return await decodeAudioDataSafe(arrayBuffer);
+      } catch (err) {
+        lastError = err;
+      }
+    }
+    throw new Error(`Failed to load audio via fetch candidates: ${candidates.join(' | ')} :: ${lastError?.message || ''}`);
   };
 
   if (selectedSong.isTutorial) {
